[metadata]
name = braq
version = file: VERSION
url = https://github.com/pyrustic/braq
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Customizable data format for config files, AI prompts, and more
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    data-format
    config
    configuration
    configfile
    config-files
    customizable
    versatile
    ai-prompts
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: File Formats
    Intended Audience :: Developers

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    paradict
    written

[options.entry_points]
console_scripts =
    braq = braq.__main__:main
